--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <span id="author">Loading...</span>
         <div>
             <button onclick="getquote(api_url)"><b>New Quote</b></button>
-            <button onclick="tweet()"><img src="twitter.png"><b>Tweet</b></button>
+            <button onclick="tweet()"><b>Tweet it</b></button>
         </div>
     </div>
     <script src="script.js"></script>
